# harrow-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt
db-gen/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
db-gen/src/: index.ts
entity/: Cargo.toml
entity/src/: bookmarks.rs  lib.rs  likes.rs  lists.rs  media.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: cli.rs  generators.rs  main.rs  utils.rs
