[package]
name = "harrow-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
sea-orm = { version = "0.10.3", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.13", features = ["stream"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
migration = { path = "./migration" }
entity = { path = "./entity" }
futures = "0.3.25"
dirs = "4.0.0"
clap = { version = "4.0.29", features = ["derive"] }

[workspace]
members = [
  ".",
  "migration",
  "entity"
]
